# nextdomen_backend

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: rust.yml
keys/: jwt-private.pem  jwt-public.pem
mypackage/DEBIAN/: control
src/: auth.rs  build.rs  cli.rs  config.rs  directory_service.rs  events.rs  grpc.rs  ldap.rs  lib.rs  main.rs  middleware.rs  raddb.rs  web.rs
src/grpc/: mod.rs
src/ldap/: asn1.rs  filter.rs  mod.rs  tls.rs
src/models/: domain.rs  domain_controller.rs  group.rs  mfa.rs  mod.rs  organization.rs  ou.rs  password.rs  policy.rs  sid.rs  user.rs  well_known.rs
src/proto/: audit.proto  auth.proto  config.proto  organization.proto  user.proto
src/web/: login.rs
tests/integration/: auth.rs  users.rs
