[package]
name = "nextDomen"
version = "0.1.0"
edition = "2024"
authors = ["AlexEfanov"]
description = "NewActDomen"
license = "MIT"

[dependencies]
# Основные
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
dirs = "5.0"
bitflags = { version = "2.4", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
bcrypt = "0.14"

# 🔐 TLS для LDAPS
tokio-rustls = "0.24"
rustls = "0.22"
webpki-roots = "0.25"
rustls-pemfile = "1.0"

# 🖥️ CLI и Web API
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"